Add width for letter-spacing when calculating desired width of text input controls. b=252783 r=bzbarsky sr=dbaron